--- a/src/Aufgabe3/View.fxml
+++ b/src/Aufgabe3/View.fxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"? fx:controller="Aufgabe3.Controller" ?>
 
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
