--- a/src/Aufgabe3/View.fxml
+++ b/src/Aufgabe3/View.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.MenuButton?>
 
 
 <VBox fx:controller="Aufgabe3.Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <MenuButton fx:id="menuButton" onAction="#button" mnemonicParsing="false" text="Datei">
+      <MenuButton  fx:id="menuButton" onAction="#button" mnemonicParsing="false" text="Datei">
         <items>
             <Menu fx:id="menu" mnemonicParsing="false" text="Unspecified Menu">
               <items>
