--- a/src/aufgabe301/View.fxml
+++ b/src/aufgabe301/View.fxml
@@ -10,18 +10,18 @@
 <VBox fx:controller="aufgabe301.Controller"  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aufgabe301.Controller">
    <children>
       <MenuBar fx:id="menuBar">
-         <menus>
+        
             <Menu fx:id="fileMenu" mnemonicParsing="false" text="Datei">
-              <items>
-                <MenuItem fx:id="newFileMenuItem" mnemonicParsing="false" text="Neu" onAction="#newFile"/>
-                  <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" text="Öffnen..." onAction="#openFile" />
-                  <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" text="Speichern" onAction="#saveFile"/>
-                  <MenuItem fx:id="saveFileAsMenuItem" mnemonicParsing="false" text="Speichern unter..." onAction="#saveFileAs" />
-              </items>
+             
+                <MenuItem fx:id="newFileMenuItem"  text="Neu" onAction="#newFile"/>
+                  <MenuItem fx:id="openFileMenuItem"  text="Öffnen..." onAction="#openFile" />
+                  <MenuItem fx:id="saveFileMenuItem"  text="Speichern" onAction="#saveFile"/>
+                  <MenuItem fx:id="saveFileAsMenuItem" text="Speichern unter..." onAction="#saveFileAs" />
+              
             </Menu>
-         </menus>
+        
       </MenuBar>
       <Label fx:id="Label" text="Label" />
-      <TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" />
+      <TextArea fx:id="textArea"  />
    </children>
 </VBox>
